--- a/index.html
+++ b/index.html
@@ -133,22 +133,22 @@
                     <p><i class="fas fa-map-marker-alt"></i>Av. Guasina,Edificio Doña Rosalía, Frente el  Liceo Anibal Rojas Pérez, Planta baja Tucupita, Estado Delta Amacuro</p>
                     <p>Estamos disponibles para responder tus preguntas y asesorarte en cuanto a las publicaciones de estadísticas y croquis.</p>
                 </div>
-                <form class="contact-form">
+                <form class="contact-form" id="contact-form" action="" method="POST">
                     <div class="form-group">
                         <label for="name">Nombre</label>
-                        <input type="text" id="name" required>
+                        <input type="text" name="name" id="name" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Correo Electrónico</label>
-                        <input type="email" id="email" required>
+                        <input type="email" name="email" id="email" required>
                     </div>
                     <div class="form-group">
                         <label for="subject">Asunto</label>
-                        <input type="text" id="subject" required>
+                        <input type="text" nane="subjet" id="subject" required>
                     </div>
                     <div class="form-group">
                         <label for="message">Mensaje</label>
-                        <textarea id="message" required></textarea>
+                        <textarea name="message" id="message" required></textarea>
                     </div>
                     <button type="submit" class="btn">Enviar Mensaje</button>
                 </form>
@@ -246,5 +246,6 @@
             });
         });
     </script>
+    <script src="js/formulario.js"></script>
 </body>
 </html>
