--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <p><i class="fas fa-map-marker-alt"></i>Av. Guasina,Edificio Doña Rosalía, Frente el  Liceo Anibal Rojas Pérez, Planta baja Tucupita, Estado Delta Amacuro</p>
                     <p>Estamos disponibles para responder tus preguntas y asesorarte en cuanto a las publicaciones de estadísticas y croquis.</p>
                 </div>
-                <form class="contact-form" id="contact-form" action="" method="POST">
+                <form class="contact-form" id="contact-form" action="https://formsubmit.co/fguedez1311@gmail.com" method="POST">
                     <div class="form-group">
                         <label for="name">Nombre</label>
                         <input type="text" name="name" id="name" required>
@@ -144,7 +144,7 @@
                     </div>
                     <div class="form-group">
                         <label for="subject">Asunto</label>
-                        <input type="text" nane="subjet" id="subject" required>
+                        <input type="text" name="subjet" id="subject" required>
                     </div>
                     <div class="form-group">
                         <label for="message">Mensaje</label>
