Se actualizó los datos json

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -17,7 +17,7 @@
                 </figure>
                 <ul class="nav-links" id="navLinks">
                     <li><a href="/">Home</a></li>
-                    <li><a href="estadisticas.html">Delta Amacuro</a></li>
+                    <li><a href="estadisticas.html">Delta</a></li>
                     <li><a href="municipio.html">Municipio</a></li>
                     <li> <a href="parroquia.html">Parroquia</a></li>
                     <li><a href="nomeclador.html">Nomeclador</a></li>
