Se enlazó la página de estadísticas

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1>Servicio  de Atención del Usuario (SAU) del Estado Delta Amacuro</h1>
                 <p> Puede encontrar las estadísticas y los croquis del estado Delta Amacuro sus municipios y parroquias.</p>
                 <div class="hero-btns">
-                    <a href="estadisticas.html" class="btn">Publicaciones</a>
+                    <a href="https://fguedez1311.github.io/page-estadistica/" class="btn" target="_blank">Publicaciones</a>
                    
                 </div>
             </div>
