Modificación de la dirección web de las estadísticas

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1>Servicio  de Atención del Usuario (SAU) del Estado Delta Amacuro</h1>
                 <p> Puede encontrar las estadísticas y los croquis del estado Delta Amacuro sus municipios y parroquias.</p>
                 <div class="hero-btns">
-                    <a href="https://fguedez1311.github.io/page-estadistica/" class="btn" target="_blank">Publicaciones</a>
+                    <a href="https://publicaciones-sau.netlify.app/" class="btn" target="_blank">Publicaciones</a>
                    
                 </div>
             </div>
@@ -133,7 +133,7 @@
                     <p><i class="fas fa-map-marker-alt"></i>Av. Guasina,Edificio Doña Rosalía, Frente el  Liceo Anibal Rojas Pérez, Planta baja Tucupita, Estado Delta Amacuro</p>
                     <p>Estamos disponibles para responder tus preguntas y asesorarte en cuanto a las publicaciones de estadísticas y croquis.</p>
                 </div>
-                <form class="contact-form" id="contact-form" action="https://formsubmit.co/fguedez1311@gmail.com" method="POST">
+                <form class="contact-form" id="contact-form" action="https://formsubmit.co/romulomarcano64@gmail.com" method="POST">
                     <div class="form-group">
                         <label for="name">Nombre</label>
                         <input type="text" name="name" id="name" required>
